--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "addPropertyToObject",
+  "name": "add-property-to-object",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
